istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: three-tier-gateway
  namespace: three-tier-helm
  labels:
    app: three-tier
    env: production
spec:
  selector:
    istio: ingressgateway
  servers:
    # Redirect all HTTP to HTTPS
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    #   tls:
    #     httpsRedirect: true

    # # TLS termination at the gateway
    # - port:
    #     number: 443
    #     name: https
    #     protocol: HTTPS
    #   hosts:
    #     - "*"
    #   tls:
    #     mode: SIMPLE
    #     credentialName: three-tier-tls-secret   # kubectl create secret tls three-tier-tls-secret --cert=cert.pem --key=key.pem -n istio-system
