istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: three-tier-virtualservice
  namespace: three-tier-helm
spec:
  hosts:
    - "*"
  gateways:
    - three-tier-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: backend-service.three-tier-helm.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend-service.three-tier-helm.svc.cluster.local
            port:
              number: 80
